--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,7 +27,7 @@
                         <li class="active dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Conta <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Editar Perfil</a></li>
+                <li><a href="/user/profile/edit">Editar Perfil</a></li>
                 <li><a href="#">Configurações da Conta</a></li>
                 <li><a href="/">Sair</a></li>
               </ul>
