--- a/views/user/community.ejs
+++ b/views/user/community.ejs
@@ -1,77 +1,40 @@
 <%- include ../header %>
 <div class="row">
-	<div class="col-md-12">
-		<div class="row">
-			<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="/community">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		</div>
-
-		<div class="row">
-			<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		</div>
-
-		<div class="row">
-			<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		<div class="col-md-3">
-			<div class="panel panel-default">
-  				<div class="panel-body text-center">
-    				<a href="#">Inteligencia Artificial</a>
-  				</div>
-			</div>
-		</div>	
-		</div>
-	</div>
+<ol class="breadcrumb">
+  <li><a href="/user">Inicio</a></li>
+  <li><a href="/user/community">Comunidades</a></li>  
+</ol>
 </div>
+<div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-9">
+		<div class="row">
+			<div class="col-xs-4 col-sm-4">
+			<div class="panel panel-default">
+  				<div class="panel-body text-center">
+    				<a href="#">Inteligencia Artificial</a>
+  				</div>
+			</div>
+		</div>	
+		<div class="col-xs-4 col-sm-4">
+			<div class="panel panel-default">
+  				<div class="panel-body text-center">
+    				<a href="#">Inteligencia Artificial</a>
+  				</div>
+			</div>
+		</div>	
+		<div class="col-xs-4 col-sm-4">
+			<div class="panel panel-default">
+  				<div class="panel-body text-center">
+    				<a href="#">Inteligencia Artificial</a>
+  				</div>
+			</div>
+		</div>	
+		</div>
+        </div><!--/span-->
+
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+            <%- include menu %>          
+        </div><!--/span-->
+      </div><!--/row-->
 <%- include ../footer %>
