--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,2 +1,7 @@
 <%- include ../header %>
+<div class="row">
+<ol class="breadcrumb">
+  <li><a href="/user">Inicio</a></li>
+</ol>
+</div>
 <%- include ../footer %>
