--- a/api/views/footer.ejs
+++ b/api/views/footer.ejs
@@ -1,6 +1,7 @@
       <hr>
-      <footer class="text-center">
-        <p><a href="https://github.com/nicholasess">@nicholasess</a> 2014</p>
+
+      <footer>
+        <p>&copy; Company 2014</p>
       </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
