--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Moodle Nodejs</title>
+	<title>Moodle Admin</title>
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
@@ -20,11 +20,11 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/user/community">Comunidades</a></li>
+            <li><a href="/user/community">Alunos</a></li>
+            <li><a href="/user/community">Professores</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/user">Home</a></li>
-            <li><a href="/user/profile">Profile</a></li>
-                        <li>
+            <li>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Conta <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="/user/profile/edit">Editar Perfil</a></li>
