--- a/views/user/doc.ejs
+++ b/views/user/doc.ejs
@@ -1,4 +1,10 @@
 <%- include ../header %>
+<div class="row">
+<ol class="breadcrumb">
+  <li><a href="/user">Inicio</a></li>
+  <li><a href="/user/doc">Documentos</a></li>
+</ol>
+</div>
 <div class="row row-offcanvas row-offcanvas-right">
 
         <div class="col-xs-12 col-sm-9">
@@ -16,3 +22,4 @@
         </div><!--/span-->
       </div><!--/row-->
 <%- include ../footer %>
+
