--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -19,9 +19,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/user/community">Comunidades</a></li>
-            <li><a href="/user/community">Alunos</a></li>
-            <li><a href="/user/community">Professores</a></li>
+            <li><a href="/admin/degree">Cursos</a></li>
+            <li><a href="/admin/community">Comunidades</a></li>
+            <li><a href="/admin/user">Alunos</a></li>
+            <li><a href="/admin/teacher">Professores</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
