update banner, add routes, views, controllers

--- a/views/user/nota.ejs
+++ b/views/user/nota.ejs
@@ -2,6 +2,8 @@
 <div class="row row-offcanvas row-offcanvas-right">
 
         <div class="col-xs-12 col-sm-9">
+        <div class="row">
+        	<h3>Notas e Faltas</h3>
  		<table class="table table-bordered">
 	<thead>
 		<tr>
@@ -14,14 +16,63 @@
 	</thead>
 	<tbody>
 		<tr>
-			<td></td>
-			<td></td>
+			<td>Inteligencia Artificial</td>
+			<td>10</td>
+			<td>5</td>
+			<td>10</td>
+			<td>5</td>
+		</tr>
+		<tr>
+			<td>Programação em Sistema Distribuido</td>
+			<td>10</td>
+			<td>5</td>
+			<td>10</td>
+			<td>5</td>
+		</tr>
+		<tr>
+			<td>Sistema de Apoio a Decisão</td>
+			<td>10</td>
+			<td>5</td>
+			<td>10</td>
+			<td>5</td>
+		</tr>
+		<tr>
+			<td>Avaliação de Sistemas</td>
+			<td>10</td>
+			<td>5</td>
+			<td>10</td>
+			<td>5</td>
+		</tr>
+		<tr>
+			<td>Trabalho de Conclusão de Curso</td>
+			<td>10</td>
+			<td>5</td>
+			<td>10</td>
+			<td>5</td>
+		</tr>
+	</tbody>
+</table>
+        </div>
+        <div class="row">
+        	<h3>Matérias Pendentes</h3>
+        <table class="table table-bordered">
+	<thead>
+		<tr>
+			<td>Disciplina</td>
+			<td>Ano do Curso</td>
+			<td>Horas</td>
+			
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
 			<td></td>
 			<td></td>
 			<td></td>
 		</tr>
 	</tbody>
 </table>
+        </div>
         </div><!--/span-->
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
