--- a/views/admin/community/new.ejs
+++ b/views/admin/community/new.ejs
@@ -1,3 +1,20 @@
-<%- include header %>
+<%- include ../header %>
+<div class="row">
+	<div class="col-md-12">
+<h3>Cadastro de Comunidades</h3>
+<form role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 
-<%- include footer %>
+
+	</div>
+</div>	
+<%- include ../footer %>
