--- a/views/admin/teacher/index.ejs
+++ b/views/admin/teacher/index.ejs
@@ -20,7 +20,7 @@
 			<tbody>
 				<tr>
 					<td>1</td>
-					<td>Teoria Geral de Administração</td>
+					<td>Administração</td>
 					<td><span class="label label-success">Ok</span></td>
 					<td>
 						<a href="#" class="btn">Editar</a>
@@ -28,7 +28,7 @@
 				</tr>
 				<tr>
 					<td>2</td>
-					<td>Teoria Geral de Sistema</td>
+					<td>Relações Públicas</td>
 					<td><span class="label label-danger">Not</span></td>
 					<td>
 						<a href="#" class="btn">Editar</a>
