--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,8 +27,7 @@
                         <li>
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Conta <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="/user/profile/edit">Editar Perfil</a></li>
-                <li><a href="#">Configurações da Conta</a></li>
+                <li><a href="#">Configurações</a></li>
                 <li><a href="/">Sair</a></li>
               </ul>
             </li>
