--- a/views/user/community.ejs
+++ b/views/user/community.ejs
@@ -1,30 +1,25 @@
 <%- include ../header %>
-<div class="row">
-<ol class="breadcrumb">
-  <li><a href="/user">Inicio</a></li>
-  <li><a href="/user/community">Comunidades</a></li>  
-</ol>
-</div>
+
 <div class="row row-offcanvas row-offcanvas-right">
 
         <div class="col-xs-12 col-sm-9">
 		<div class="row">
 			<div class="col-xs-4 col-sm-4">
-			<div class="panel panel-default">
+			<div class="panel panel-success">
   				<div class="panel-body text-center">
     				<a href="#">Inteligencia Artificial</a>
   				</div>
 			</div>
 		</div>	
 		<div class="col-xs-4 col-sm-4">
-			<div class="panel panel-default">
+			<div class="panel panel-success">
   				<div class="panel-body text-center">
     				<a href="#">Inteligencia Artificial</a>
   				</div>
 			</div>
 		</div>	
 		<div class="col-xs-4 col-sm-4">
-			<div class="panel panel-default">
+			<div class="panel panel-success">
   				<div class="panel-body text-center">
     				<a href="#">Inteligencia Artificial</a>
   				</div>
