--- a/views/admin/course/index.ejs
+++ b/views/admin/course/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col-md-12">
-		<a href="/admin/teacher/new" class="btn btn-info">Cadastrar Professor</a>
+		<a href="/admin/course/new" class="btn btn-info">Cadastrar Curso</a>
 	</div>
 </div>
 <br />
@@ -20,7 +20,7 @@
 			<tbody>
 				<tr>
 					<td>1</td>
-					<td>Wagner de Souza</td>
+					<td>Administração</td>
 					<td><span class="label label-success">Ok</span></td>
 					<td>
 						<a href="#" class="btn">Editar</a>
@@ -28,7 +28,7 @@
 				</tr>
 				<tr>
 					<td>2</td>
-					<td>Alexandre Pires</td>
+					<td>Sistema de Informação</td>
 					<td><span class="label label-danger">Not</span></td>
 					<td>
 						<a href="#" class="btn">Editar</a>
