--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
