--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -23,16 +23,10 @@
             <li><a href="/admin/community">Comunidades</a></li>
             <li><a href="/admin/student">Alunos</a></li>
             <li><a href="/admin/teacher">Professores</a></li>
+            <li><a href="/admin/opportunity">Oportunidades</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Conta <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="/user/profile/edit">Editar Perfil</a></li>
-                <li><a href="#">Configurações da Conta</a></li>
-                <li><a href="/">Sair</a></li>
-              </ul>
-            </li>
+            <li><a href="/">Sair</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
