add profile all path from admin

--- a/views/admin/opportunity/index.ejs
+++ b/views/admin/opportunity/index.ejs
@@ -12,7 +12,8 @@
 			<thead>
 				<tr>
 					<td>ID</td>
-					<td>Nome</td>
+					<td>Curso</td>
+					<td>Descrição</td>
 					<td>Status</td>
 					<td></td>
 				</tr>
@@ -20,16 +21,11 @@
 			<tbody>
 				<tr>
 					<td>1</td>
-					<td>Wagner de Souza</td>
-					<td><span class="label label-success">Ok</span></td>
 					<td>
-						<a href="#" class="btn">Editar</a>
+						<a href="/admin/opportunity/profile">Engenharia Civil</a>
 					</td>
-				</tr>
-				<tr>
-					<td>2</td>
-					<td>Alexandre Pires</td>
-					<td><span class="label label-danger">Not</span></td>
+					<td>Estágio de Engenheiro Civil</td>
+					<td><span class="label label-success">Ok</span></td>
 					<td>
 						<a href="#" class="btn">Editar</a>
 					</td>
