--- a/views/admin/student/index.ejs
+++ b/views/admin/student/index.ejs
@@ -11,8 +11,9 @@
 		<table class="table table-bordered">
 			<thead>
 				<tr>
-					<td>ID</td>
+					<td>Matricula</td>
 					<td>Nome</td>
+					<td>Curso</td>
 					<td>Status</td>
 					<td></td>
 				</tr>
@@ -20,7 +21,12 @@
 			<tbody>
 				<tr>
 					<td>1</td>
-					<td>Joãozinho</td>
+					<td>
+						<a href="/admin/student/profile">Joãozinho</a>
+					</td>
+					<td>
+						<a href="/admin/student/profile">Sistema de Informação</a>
+					</td>
 					<td><span class="label label-success">Ok</span></td>
 					<td>
 						<a href="#" class="btn">Editar</a>
