adicionado model de user

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -11,8 +11,8 @@
 <div class="container">
       <form class="form-signin" role="form" method="post" action="/">
         <h2 class="form-signin-heading text-center">Bem vindo ao Moodle</h2>
-        <input type="text" name="email" class="form-control" placeholder="Email "  autofocus />
-        <input type="password" name="password" class="form-control" placeholder="Password" />
+        <input type="text" name="inscription" class="form-control" placeholder="Matricula "  autofocus required/>
+        <input type="password" name="password" class="form-control" placeholder="Senha" required/>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
       </form>
     </div> <!-- /container -->
