--- a/views/admin/student/index.html
+++ b/views/admin/student/index.html
@@ -24,7 +24,7 @@
 						{{ student.firstName }} {{ student.lastName }}
 					</td>
 					<td>
-						<a href="/admin/student/profile/{{ student.inscription }}">Editar</a>
+						<a href="/admin/student/profile/{{ student.inscription }}">Visualizar Perfil</a>
 					</td>
 				</tr>
 				{% endfor %}
