--- a/views/admin/student/profile.html
+++ b/views/admin/student/profile.html
@@ -1,4 +1,5 @@
 {% extends '../layout.html' %}
 {% block content %}
+<a href="/admin/student/edit/{{ student.inscription }}">Editar</a>
 <p>Student </p>
 {% endblock %}
