--- a/views/admin/student/edit.html
+++ b/views/admin/student/edit.html
@@ -1,5 +1,37 @@
 {% extends '../layout.html' %}
-
 {% block content %}
-<p>Student Edit</p>
+<div class="row">
+<div class="col-md-4">
+<form role="form" action="/admin/student/update" method="post">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Matricula</label>
+    <input type="text" name="user[inscription]" class="form-control" value="{{ student.inscription }}" disabled>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Nome</label>
+    <input type="text" name="user[firstName]" class="form-control" value="{{ student.firstName }}" placeholder="Nome">
+  </div>
+    <div class="form-group">
+    <input type="hidden" name="user[inscription]" class="form-control" value="{{ inscription }}">
+    <input type="hidden" name="user[typeUser]" value="1">
+  </div>
+</div>
+<div class="col-md-4">
+<form role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email</label>
+    <input type="email" name="user[email]" class="form-control" value="{{ student.email }}" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">SobreNome</label>
+    <input type="text" name="user[lastName]" class="form-control"  value="{{ student.lastName }}" placeholder="Sobrenome">
+  </div>
+</div>		
+</div>
+<div class="row">
+<div class="col-md-12">
+ <button type="submit" class="btn btn-success">Atualizar</button>
+</div>
+</form>	
+</div>
 {% endblock %}
