--- a/views/admin/student/edit.html
+++ b/views/admin/student/edit.html
@@ -12,8 +12,7 @@
     <input type="text" name="user[firstName]" class="form-control" value="{{ student.firstName }}" placeholder="Nome">
   </div>
     <div class="form-group">
-    <input type="hidden" name="user[inscription]" class="form-control" value="{{ inscription }}">
-    <input type="hidden" name="user[typeUser]" value="1">
+    <input type="hidden" name="user[inscription]" class="form-control" value="{{ student.inscription }}">
   </div>
 </div>
 <div class="col-md-4">
